Add links to the pages
In index page, I have added recipe texts and linked it to its specific recipe pages

In recipe pages, I have added "Home" text that leads to the homepage/index page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,6 +5,7 @@
         <title>Lasagna Recipe</title>
     </head>
     <body>
+        <a href="../index.html">Home</a>
         <h1>Lasagna</h1>
     </body>
 </html>
