--- a/recipes/roasted-red-potatoes.html
+++ b/recipes/roasted-red-potatoes.html
@@ -5,6 +5,7 @@
         <title>Roasted Red Potatoes Recipe</title>
     </head>
     <body>
+        <a href="../index.html">Home</a>
         <h1>Roasted Red Potatoes</h1>
     </body>
 </html>
