--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/fresh-salmon-cakes.html">Fresh Salmon Cake</a></li>
+            <li><a href="./recipes/roasted-red-potatoes.html">Roasted Red potatoes</a></li>
+            <li><a href="./recipes/rosemary-lemon-grilled-chicken.html">Rosemary Lemon Grilled Chicken</a></li>
+        </ul>
     </body>
 </html>
