--- a/recipes/fresh-salmon-cakes.html
+++ b/recipes/fresh-salmon-cakes.html
@@ -5,6 +5,7 @@
         <title>Fresh Salmon Cake Recipe</title>
     </head>
     <body>
+        <a href="../index.html">Home</a>
         <h1>Fresh Salmon Cake</h1>
     </body>
 </html>
