--- a/recipes/rosemary-lemon-grilled-chicken.html
+++ b/recipes/rosemary-lemon-grilled-chicken.html
@@ -5,6 +5,7 @@
         <title>Rosemary Lemon Grilled Chicken Recipe</title>
     </head>
     <body>
+        <a href="../index.html">Home</a>
         <h1>Rosemary Lemon Grilled Chicken</h1>
     </body>
 </html>
