Modified some text on 3 recipe pages

--- a/recipes/fresh-salmon-cakes.html
+++ b/recipes/fresh-salmon-cakes.html
@@ -6,9 +6,10 @@
     </head>
     <body>
         <a href="../index.html">Home</a>
-        <h1>Fresh Salmon Cake Recipe</h1>
+        <h1>Fresh Salmon Cake</h1>
         <img src="../img/fresh-salmon-cake.jpg" alt="Fresh salmon cake with fresh veggies in the back" width="350">
-        <h2>Fresh Salmon Cake</h2>
+        
+        <h2>Description</h2>
         <p>Salmon cakes are one of my go-to emergency meals. Every once in a while I like to use fresh salmon. Salmon is one of those products, like chicken, that's very easy to get into a rut with.</p>
         <p>People generally find a few recipes that work for them, and just stay with those, but this fairly simple preparation should be easy to add to anyone's rotation. Serve with lemon wedge and remoulade sauce. You can use any bread crumbs instead of panko breadcrumbs, if desired.</p>
 
