--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,9 +6,10 @@
     </head>
     <body>
         <a href="../index.html">Home</a>
-        <h1>Lasagna Recipe</h1>
+        <h1>Lasagna</h1>
         <img src="../img/lasagna.jpg" alt="special homemade lasagna in a white plate" width="350">
-        <h2>Lasagna</h2>
+        
+        <h2>Description</h2>
         <p>This is my mom's special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce and a deliciously cheesy filling. A more traditional homemade lasagna filling would be made with ricotta but my mom's recipe calls for a blend of small-curd cottage cheese and Parmesan.</p>
         <p>I have found none better anywhere. Serve with a leafy green salad and crusty garlic bread.</p>
 
