--- a/recipes/rosemary-lemon-grilled-chicken.html
+++ b/recipes/rosemary-lemon-grilled-chicken.html
@@ -6,9 +6,10 @@
     </head>
     <body>
         <a href="../index.html">Home</a>
-        <h1>Rosemary Lemon Grilled Chicken Recipe</h1>
+        <h1>Rosemary Lemon Grilled Chicken</h1>
         <img src="../img/grilled-chicken.jpg" alt="Rosemary Lemon Grilled Chicken with cream cheese, thyme, lemon and mashed potato" width="350">
-        <h2>Rosemary Lemon Grilled Chicken</h2>
+        
+        <h2>Description</h2>
         <p>This simple, sensational marinade and sauce for grilled chicken is made with lemon, garlic, rosemary, and butter. Separate the marinade into thirds: 1/3 for marinating, 1/3 for basting, and 1/3 for topping.
         </p>
 
